--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "creating-a-router",
-  "version": "1.0.0",
+  "name": "@rbusquet/creating-a-router",
+  "version": "0.0.2",
   "description": "A simple router implementation",
   "keywords": [
     "react",
@@ -16,15 +16,15 @@
   },
   "license": "MIT",
   "author": "Ricardo Busquet <me@rbusquet.dev>",
-  "main": "dist/router.js",
-  "module": "/src/index.ts",
+  "main": "dist/index.js",
+  "module": "./src/index.ts",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "webpack --mode production",
     "test": "jest"
-  },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@jedmao/location": "^3.0.0",
@@ -34,12 +34,18 @@
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.9",
     "clean-webpack-plugin": "^3.0.0",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1"
   }
 }
