--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rbusquet/creating-a-router",
+  "name": "@rbusquet/router",
   "version": "0.0.2",
   "description": "A simple router implementation",
   "keywords": [
@@ -27,14 +27,17 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@jedmao/location": "^3.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "clean-webpack-plugin": "^3.0.0",
     "declaration-bundler-webpack-plugin": "^1.0.3",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "react": "^17.0.1",
