--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "build": "webpack --mode production",
     "test": "jest"
   },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
     "@jedmao/location": "^3.0.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -38,9 +42,5 @@
     "typescript": "^4.1.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
-  },
-  "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
   }
 }
