--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "declaration-bundler-webpack-plugin": "^1.0.3",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "react": "^17.0.1",
